--- a/Hands-On_Ex/Hands-On_Ex3/Hands-On_Ex3.qmd
+++ b/Hands-On_Ex/Hands-On_Ex3/Hands-On_Ex3.qmd
@@ -70,6 +70,8 @@ The R packages needed for this exercise are as follows:
 
     -   **ClustGeo**
 
+    -   **GGally**
+
 Using the code chunks below, we will install and launch these R packages into the R environment.
 
 ```{r}
@@ -77,7 +79,7 @@ library(pacman)
 ```
 
 ```{r}
-pacman::p_load(rgdal, spdep, tmap, sf, ggpubr, cluster, factoextra, NbClust, heatmaply, corrplot, psych, tidyverse, ClustGeo)
+pacman::p_load(rgdal, spdep, tmap, sf, ggpubr, cluster, factoextra, NbClust, heatmaply, corrplot, psych, tidyverse, ClustGeo, GGally)
 ```
 
 Note: With **tidyverse**, we do not have to install **readr**, **ggplot2** and **dplyr** packages separately. In fact, **tidyverse** also installs other very useful R packages such as **tidyr**.
@@ -869,4 +871,68 @@ We can now plot the map of the newly delineated spatially constrained clusters.
 
 ```{r}
 qtm(shan_sf_Gcluster, "CLUSTER")
+```
+
+# 9 Visual Interpretation of Clusters
+
+## 9.1 Visualising individual clustering variables
+
+The code chunk below is used to reveal the distribution of a clustering variable(i.e. RADIO_PR) by cluster.
+
+```{r}
+ggplot(data = shan_sf_ngeo_cluster,
+       aes(x = CLUSTER, y = RADIO_PR)) +
+  geom_boxplot()
+```
+
+The boxplot above reveals that Cluster 3 displays the highest mean Radio Ownership per Thousand Household. This is followed by Cluster 2, 1, 4, 5 and 5.
+
+## 9.2 Multivariate Visualisation
+
+Past studies have shown that parallel coordinate plot can be used to reveal clustering variables by cluster very effectively. In the code chunk below, [`ggparcoord()`](https://ggobi.github.io/ggally/reference/ggparcoord.html) of [**GGally**](https://ggobi.github.io/ggally/) package is used to display multiple parallel coordinates plots by clusters.
+
+```{r}
+ggparcoord(data = shan_sf_ngeo_cluster, 
+           columns = c(17:21), 
+           scale = "globalminmax",
+           alphaLines = 0.2,
+           boxplot = TRUE, 
+           title = "Multiple Parallel Coordinates Plots of ICT Variables by Cluster") +
+  facet_grid(~ CLUSTER) + 
+  theme(axis.text.x = element_text(angle = 30))
+```
+
+The parallel coordinate plot above reveals that households in Cluster 4 townships tend to own the highest number of TV and mobile-phone. On the other hand, households in Cluster 5 tends to own the lowest of all the five ICT.
+
+Note that the `scale` argument of `ggparcoor()` provide several methods to scale the clustering variables. They are:
+
+-   std: univariately, subtract mean and divide by standard deviation.
+
+-   robust: univariately, subtract median and divide by median absolute deviation.
+
+-   uniminmax: univariately, scale so the minimum of the variable is zero, and the maximum is one.
+
+-   globalminmax: no scaling is done; the range of the graphs is defined by the global minimum and the global maximum.
+
+-   center: use uniminmax to standardize vertical height, then center each variable at a value specified by the scaleSummary param.
+
+-   centerObs: use uniminmax to standardize vertical height, then center
+    each variable at the value of the observation specified by the
+    centerObsID param
+
+There is no one best scaling method to use. We should explore them and select the one that best meet our analysis need.
+
+Last but not least, we can also compute the summary statistics such as mean, median, sd, etc to complement the visual interpretation.
+
+In the code chunk below, `group_by()` and `summarise()` of dplyr are used to derive mean values of the clustering variables.
+
+```{r}
+shan_sf_ngeo_cluster %>% 
+  st_set_geometry(NULL) %>%
+  group_by(CLUSTER) %>%
+  summarise(mean_RADIO_PR = mean(RADIO_PR),
+            mean_TV_PR = mean(TV_PR),
+            mean_LLPHONE_PR = mean(LLPHONE_PR),
+            mean_MPHONE_PR = mean(MPHONE_PR),
+            mean_COMPUTER_PR = mean(COMPUTER_PR))
 ```
