--- a/Take-Home_Ex/Take-Home_Ex2/Take-Home_Ex2.qmd
+++ b/Take-Home_Ex/Take-Home_Ex2/Take-Home_Ex2.qmd
@@ -78,7 +78,7 @@ For this study, two geospatial data will be used:
 
 ### 2.1.1 Importing water point geospatial data
 
--   The water point geospatial data will be downloaded from [WPdx Global Data Repositories](https://www.waterpointdata.org/access-data/), specifically the WPdx+ data set will be used. In the code chunk below, we will import the shapefile as simple features data table into R environment using st_read() of sf package. filter() of dplyr will be used to extract water point records of Nigeria.
+-   The water point geospatial data will be downloaded from [WPdx Global Data Repositories](https://www.waterpointdata.org/access-data/), specifically the WPdx+ data set will be used. In the code chunk below, we will import the shapefile as simple features data table into R environment using st_read() of sf package. filter() of dplyr will be used to extract water point records of Nigeria.s
 
 ```{r}
 #| eval: false
@@ -228,9 +228,7 @@ freq(data = wpt_nonfunctional,
 
 ### 2.2.6 Extracting main water point technology
 
-In the code chunks below, freq() of funModeling package is used to display the distribution of water technologies (i.e. *water_te_2* field) in *wp_nga*.
-
-In the code chunk below, filter() of dplyr is used to select water points whose main technology is hand pumps.
+In the code chunks below, unique() and freq() of funModeling package is used to display the types of water technologies (i.e. *water_te_2* field) and their respective distributions in *wp_nga*.
 
 ```{r}
 #| eval: false
@@ -253,6 +251,8 @@ freq(data = wp_nga,
 
 ![](data2/screenshot%208.jpg)
 
+In the code chunks below, filter() of dplyr is used to select water points whose main technology is hand pumps, and freq() of funModeling package to determine the distribution.
+
 ```{r}
 #| eval: false
 
@@ -274,6 +274,8 @@ freq(data = wpt_handpump,
 
 ![](data2/screenshot%209.jpg)
 
+In the code chunks below, filter() of dplyr is used to select water points whose main technology is mechanised pumps, and freq() of funModeling package to determine the distribution.
+
 ```{r}
 #| eval: false
 wpt_mechpump <- wp_nga %>%
@@ -290,6 +292,8 @@ freq(data = wpt_mechpump,
 ```
 
 ![](data2/screenshot%2010.jpg)
+
+In the code chunks below, filter() of dplyr is used to select water points whose main technology is rope and buckets, as well as the unknowns, and freq() of funModeling package to determine their distributions.
 
 ```{r}
 #| eval: false
@@ -309,7 +313,7 @@ freq(data = wpt_misc,
 
 ### 2.2.7 Extracting usage capacity
 
-In the code chunk below, filter() of dplyr is used to select usage capacity (i.e. \<1000, \>= 1000).
+In the code chunks below, filter() of dplyr is used to select usage capacity (i.e. \<1000, \>= 1000), and freq() of funModeling package to determine their distributions.
 
 ```{r}
 #| eval: false
@@ -323,15 +327,15 @@ wpt_usage1000more <- wp_nga %>%
 
 ```{r}
 #| eval: false
-freq(data = wpt_usage1000less,
+freq(data = wp_nga,
      input = "usage_cap")
 ```
 
-![](data2/screenshot%2012.jpg)
+![](data2/screenshot%2016.jpg)
 
 ### 2.2.7 Extracting rural water points
 
-In the code chunk below, filter() of dplyr is used to select rural water points.
+In the code chunk below, filter() of dplyr is used to select rural water points, and freq() of funModeling package to determine the distribution.
 
 ```{r}
 #| eval: false
@@ -344,10 +348,10 @@ freq(data = wp_nga,
 ```{r}
 #| eval: false
 wpt_rural <- wp_nga %>%
-  filter(is_urban == FALSE)
+  filter(is_urban == "False")
 
 wpt_urban <- wp_nga %>%
-  filter(is_urban == TRUE)
+  filter(is_urban == "True")
 ```
 
 ### 2.2.8 Point-in-polygon overlay
@@ -391,7 +395,7 @@ nga_wp <- nga %>%
 
 ### 2.2.9 Saving the analytical data table
 
-In the code chunk below, mutate() of dplyr package is used to drive seven fields, namely pct_functional, pct non-functional, pct wpt_handpump, pct wpt_mechpump, pct wpt_usage1000more, pct qpt_usage1000less and pct wpt_rural. To keep the file size small, select() of dplyr is used to retain only fields 3,4,9,10,18,19,20,21,22 and 23.
+In the code chunk below, mutate() of dplyr package is used to drive seven fields, namely pct_functional, pct non-functional, pct wpt_handpump, pct wpt_mechpump, pct wpt_usage1000more, pct qpt_usage1000less and pct wpt_rural.
 
 ```{r}
 #| eval: false
@@ -464,7 +468,7 @@ write_rds(nga_wp26391, "data2/nga_wp26391.rds")
 In the code chunk below, we plot the distribution of the variables (e.g. Number of water points with hand pumps). Histogram is useful to identify the overall distribution of the data values (i.e. left skew, right skew or normal distribution)
 
 ```{r}
-nga_wp <- read_rds("data2/nga_wp.rds")
+nga_wp <- read_rds("data2/nga_wp26391.rds")
 ```
 
 ```{r}
@@ -536,7 +540,41 @@ ggarrange(wpf, pcf, wpnf, pcnf, pchp, pcmp, pcu1l, pcu1m, pcu,
 
 # 4. Correlation Analysis
 
-XXX
+Before we perform cluster analysis, it is important for us to ensure that the cluster variables are not highly correlated.
+
+In the code chunk below, we will first assign all the NaN values to 0.
+
+```{r}
+nga_wp$pct_functional[is.nan(nga_wp$pct_functional)] <- 0
+nga_wp$`pct_non-functional`[is.nan(nga_wp$`pct_non-functional`)] <- 0
+nga_wp$pct_handpump[is.nan(nga_wp$pct_handpump)] <- 0
+nga_wp$pct_mechpump[is.nan(nga_wp$pct_mechpump)] <- 0
+nga_wp$pct_usage1000less[is.nan(nga_wp$pct_usage1000less)] <- 0
+nga_wp$pct_usage1000more[is.nan(nga_wp$pct_usage1000more)] <- 0
+nga_wp$pct_rural[is.nan(nga_wp$pct_rural)] <- 0
+```
+
+Using the code chunk below, we will use [*corrplot.mixed()*](https://cran.r-project.org/web/packages/corrplot/corrplot.pdf) function of [**corrplot**](https://cran.r-project.org/web/packages/corrplot/vignettes/corrplot-intro.html) package to visualise and analyse the correlation of the input variables.
+
+```{r}
+nga_wp_derived <- nga_wp %>%
+  st_set_geometry(NULL) %>%
+  select(c(14,15,21:27))
+  
+head(nga_wp_derived)
+```
+
+```{r}
+cluster_vars.cor = cor(nga_wp_derived)
+corrplot.mixed(cluster_vars.cor,
+         lower = "ellipse", 
+               upper = "number",
+               tl.pos = "lt",
+               diag = "l",
+               tl.col = "black")
+```
+
+From the output above, we can observe that there is a high positive correlation (\> 0.8) between pct_handpump and pct_usage1000less, as well as high negative correlation between pct_mechpump and pct_usage1000less. It is noteworthy that there is perfect correlation between pct_mechpump and pct_usage1000more as the correlation value is 1.
 
 # 5. Hierarchy Cluster Analysis
 
@@ -545,23 +583,137 @@ XXX
 In the code chunk below, XXX.
 
 ```{r}
+cluster_vars <- nga_wp %>%
+  st_set_geometry(NULL) %>%
+  select("HRname", c(14,15,21:27))
 
+head(cluster_vars,10)
+```
+
+Using the code chunk below, we will next change the rows by township name instead of row number.
+
+```{r}
+row.names(cluster_vars) <- cluster_vars$"HRname"
+head(cluster_vars, 10)
+```
+
+From the output above, the row number has been replaced with townshop name.
+
+Using the code chunk below, we will delete the "HRname' field.
+
+```{r}
+nga_wp_pct <- select(cluster_vars, c(2:10))
+head(nga_wp_pct, 10)
 ```
 
 ## 5.2 Data Standardisation
 
-In the code chunk below, XXX
-
-Now that we have latitude and longitude, we use cbind to put longitude and latitude into the same object.
-
-Checking the first few observations to see if things are formatted correctl
+In general, multiple variables will be used in cluster analysis. It is not unusual their values range are different. In order to avoid the cluster analysis result is baised to clustering variables with large values, it is useful to standardise the input variables before performing cluster analysis.
 
 ### 5.2.1 Min-Max Standardisation
 
-In the code chunk below,
+In the code chunk below, *normalize()* of [*heatmaply*](https://cran.r-project.org/web/packages/heatmaply/) package is used to stadardisation the clustering variables by using Min-Max method. The *summary()* is then used to display the summary statistics of the standardised clustering variables.
 
 ```{r}
+nga_wp_pct.std <- normalize(nga_wp_pct)
 
+summary(nga_wp_pct.std)
+```
+
+From the output above, we notice that the values range of the min-max standardised clustering variables are between 0 and 1 now.
+
+### 5.2.2 Z-score standardisation
+
+Z-score standardisation can be performed easily by using [*scale()*](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/scale) of Base R. The code chunk below will be used to stadardisation the clustering variables by using Z-score method. describe() of [**psych**](https://cran.r-project.org/web/packages/psych/) package is used here because it provides standard deviation.
+
+```{r}
+nga_wp_pct.z <- scale(nga_wp_pct)
+describe(nga_wp_pct.z)
+```
+
+From the output above, the mean and standard deviation of the Z-score standardised clustering variables are 0 and 1 respectively.
+
+Note: Z-score will not be used here as not all the variables (as visualised from the histograms in Section 3.1) are normally distributed.
+
+## 5.3 Visualising the standardised clustering variables
+
+Beside reviewing the summary statistics of the standardised clustering variables, it is also a good practice to visualise their distribution graphical.
+
+The code chunks below plot the scaled *wpt functional, wpt non-functional* fields. The remaining variables (e.g. pct_handpump) need not be plotted since their existing values already range from 0 to 1.
+
+```{r}
+a <- ggplot(data=nga_wp_derived, 
+             aes(x= `wpt functional`)) +
+  geom_histogram(bins=20, 
+                 color="black", 
+                 fill="light blue") +
+  ggtitle("wpt functional - Raw values without standardisation")
+
+nga_wp_s_df <- as.data.frame(nga_wp_pct.std)
+b <- ggplot(data=nga_wp_s_df, 
+       aes(x=`wpt functional`)) +
+  geom_histogram(bins=20, 
+                 color="black", 
+                 fill="light blue") +
+  ggtitle("wpt functional - Min-Max Standardisation")
+
+c <- ggplot(data=nga_wp_derived, 
+             aes(x= `wpt non-functional`)) +
+  geom_histogram(bins=20, 
+                 color="black", 
+                 fill="light blue") +
+  ggtitle("wpt non-functional - Raw values without standardisation")
+
+d <- ggplot(data=nga_wp_s_df, 
+       aes(x=`wpt non-functional`)) +
+  geom_histogram(bins=20, 
+                 color="black", 
+                 fill="light blue") +
+  ggtitle("wpt non-functional - Min-Max Standardisation")
+
+e <- ggplot(data=nga_wp_derived, 
+             aes(x= `pct_handpump`)) +
+  geom_histogram(bins=20, 
+                 color="black", 
+                 fill="light blue") +
+  ggtitle("pct_handpump - Raw values without standardisation")
+
+f <- ggplot(data=nga_wp_s_df, 
+       aes(x=`pct_handpump`)) +
+  geom_histogram(bins=20, 
+                 color="black", 
+                 fill="light blue") +
+  ggtitle("pct_handpump - Min-Max Standardisation")
+
+ggarrange(a, b, c, d, e, f, 
+          ncol = 2,
+          nrow = 4)
+```
+
+## 5.4 Computing proximity matrix
+
+Using the code chunk below, we will compute the proximity matrix using dist() of R, method is euclidean method.
+
+```{r}
+proxmat <- dist(nga_wp_pct, method = "euclidean")
+
+proxmat
+```
+
+## 5.5 Computing hierarchical clustering
+
+Using the code chunk below, we will perform hierarchical cluster analysis using ward.D method of hclust() of R. The hierarchical clustering output is stored in an object of class **hclust** which describes the tree produced by the clustering process.
+
+```{r}
+hclust_ward <- hclust(proxmat, method = 'ward.D')
+```
+
+Using the code chunk below, we can then plot the tree using plot() of R Graphics.
+
+```{r}
+#| fig-width: 5
+#| fig-height: 10
+plot(hclust_ward, cex = 0.6)
 ```
 
 # 6. Spatially Contrained Clustering: Skater Approach
